[package]
name = "indexed-hash-set"
version = "0.1.0"
authors = ["MattesWhite <dagda92@googlemail.com>"]
edition = "2018"
description = "A bidirectional set whose entries can either be accessed via an index or via hashing. "
documentation = "https://docs.rs/indexed-hash-set/"
readme = "./README.md"
repository = "https://github.com/MattesWhite/indexed-hash-set"
homepage = "https://github.com/MattesWhite/indexed-hash-set"
license = "MIT"
keywords = ["index", "set", "hash"]
categories = ["memory-management", "data-structures"]

[dependencies]
generational-arena = "0.2.8"
